Font issue
Font size too small on small screen

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html{
 body{
     margin: auto;
     font-family: 'Inter', sans-serif;
-    font-size: large;
 }
 .page-container{
     position: relative;
